# weather_server

./: Cargo.toml
src/: main.rs
src/handlers/: weather.rs
src/models/: weather.rs
src/routes/: weather.rs
src/services/: error.rs  mod.rs  open_weather_api.rs
