[package]
name = "weather_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
dotenv = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
#
